# baruch-mfe-lab

./: README
MTH9814/homework/: HW1_comments  HW2_comments  HW3_comments  HW4_comments  HW5_comments  HW6_comments  HW7_comments  MTH9814_HW1.xlsm  MTH9814_HW2_Exercise&Application.xlsm  MTH9814_HW3_Application.xlsm  MTH9814_HW3_Exercises.xlsx  MTH9814_HW4_Application.xlsm  MTH9814_HW4_Exercises.xlsm  MTH9814_HW5_Application.xlsm  MTH9814_HW5_Exercises.xlsm  MTH9814_HW6_Application.xlsm  MTH9814_HW6_Exercises.xlsx  MTH9814_HW7.xlsm  sandBox.xlsm
MTH9814/lectures/: Math 9814 syllabus Fall 2015.docx
MTH9821/: .gitignore
MTH9821/band_op/: band_add.cpp  band_add.h  band_conversion.cpp  band_conversion.h  band_mult.cpp  band_mult.h
MTH9821/binomial_tree/: CMakeLists.txt  binomial.cpp  binomial.h  black_scholes.cpp  prob1_main.cpp  prob2_main.cpp  prob3_main.cpp  prob4_main.cpp
MTH9821/binomial_tree/unit_test/: CMakeLists.txt  binomial.t.cpp
MTH9821/cholesky/: CMakeLists.txt  cholesky.cpp  cholesky.h  main.cpp
MTH9821/example/band_spd_solve/: CMakeLists.txt  main.cpp
MTH9821/example/binomial_american_options/: CMakeLists.txt  main.cpp
MTH9821/example/lu_solve/: CMakeLists.txt  main.cpp
MTH9821/example/sor_band_solve/: CMakeLists.txt  main.cpp
MTH9821/fd/: CMakeLists.txt  boundary_conditions.h  evaluator.h  fd.cpp  fd.h  heat_pde.cpp  heat_pde.h  main.cpp  prob1_main.cpp  prob2_main.cpp  prob3_main.cpp  prob4_main.cpp  prob5_main.cpp  prob6_main.cpp  prob7_main.cpp  prob8_main.cpp  updater.cpp  updater.h
MTH9821/iterative_solve/: jacobi.cpp  jacobi.h  linear_iterate.cpp  linear_iterate.h  sor.cpp  sor.h
MTH9821/iterative_solve/unit_tests/: CMakeLists.txt  iterative_solve.t.cpp
MTH9821/laplace/: CMakeLists.txt  laplace2d.cpp  laplace2d.h  main.cpp
MTH9821/linear_solve/: CMakeLists.txt  linear_solve.cpp  linear_solve.h  main.cpp
MTH9821/linear_solve/unit_test/: CMakeLists.txt  linear_solve.t.cpp
MTH9821/load/: load.cpp  load.h
MTH9821/lu/: CMakeLists.txt  lu.cpp  lu.h  main.cpp
MTH9821/lu/unit_test/: CMakeLists.txt  lu.t.cpp
MTH9821/mc/: CMakeLists.txt  main.cpp  mc.cpp  mc.h  mc_dividend.cpp  mc_dividend.h  prob0_main.cpp  prob1_main.cpp  prob2_main.cpp  prob3_main.cpp  prob4_main.cpp  prob5_main.cpp  prob6_main.cpp  prob7_main.cpp
MTH9821/options/: black_scholes.cpp  black_scholes.h  dividend.h  option_value.h  payoff.h
MTH9821/ran/: ran.cpp  ran.h
MTH9821/ran/unit_test/: CMakeLists.txt  ran.t.cpp
MTH9821/tree_barrier_options_hongshan/: barrier_tree_main.cpp  binomial.cpp  binomial.h  tree_div_main.cpp  trinomial.cpp  trinomial.h
MTH9821/triangular_solve/: CMakeLists.txt  main.cpp  triangular_solve.cpp  triangular_solve.h
MTH9821/triangular_solve/unit_test/: CMakeLists.txt  triangular_solve.t.cpp
MTH9821/trinomial_tree/: main.cpp  prob1_main.cpp  prob2_main.cpp  prob3_main.cpp  trinomial.cpp  trinomial.h
MTH9821/util/: norminv.cpp  norminv.h
MTH9855/homework/: BetaExample.txt  MTH9855_Homework_1.ipynb  monthlyRets-clean.csv
MTH9866/assignments/: Lecture 1 Assignment.docx  Lecture 2 Assignment.docx  Lecture 3 Assignment.docx  Lecture 4 Assignment.docx  Lecture 5 Assignment.docx  Lecture 6 Assignment.docx  MTH9866_HW1_SHENGQUAN_ZHOU.ipynb  MTH9866_HW2_SHENGQUAN_ZHOU.ipynb  MTH9866_HW3_SHENGQUAN_ZHOU.ipynb  MTH9866_HW4_SHENGQUAN_ZHOU.ipynb  MTH9866_HW5_SHENGQUAN_ZHOU.ipynb  MTH9866_HW6_SHENGQUAN_ZHOU.ipynb  fx_vol_data.xlsx
MTH9876/: .gitignore
MTH9876/code/: cds.py  default.csv  lgd_plot.py  marshall_olkin_copula.py  simulate_cox.py
MTH9876/hw1/: MTH9876_HW01.tex  results.csv
MTH9876/hw2/: MTH9876_HW02.tex
MTH9876/hw3/: MTH9876_HW03.tex  default.csv
MTH9876/hw4/: MTH9876_HW04.tex
MTH9876/hw5/: MTH9876_HW05.tex  Problem1_VaR_Model_Equity_Portfolio_SHENGQUAN_ZHOU.xlsx
MTH9878/: DataSheetCurve.xls  SwaptionVolData.xls
MTH9879/Homework/: 9879HW01_ShengQuan_Zhou.ipynb  9879HW02_ShengQuan_Zhou.ipynb  9879HW03_ShengQuan_Zhou.ipynb  9879HW04_ShengQuan_Zhou.ipynb  9879HW05_ShengQuan_Zhou.ipynb  9879HW06_ShengQuan_Zhou.ipynb  9879HW07_ShengQuan_Zhou.ipynb  9879HW08_ShengQuan_Zhou.ipynb  9879HW09_ShengQuan_Zhou.ipynb  9879HW10_ShengQuan_Zhou.ipynb
MTH9879/Lectures/: 9879Lecture01-2017.ipynb  9879Lecture02-2017.ipynb  9879Lecture03-2017.ipynb  9879Lecture04-2017.ipynb  9879Lecture05-2017.ipynb  9879Lecture06-2017.ipynb  9879Lecture07-2017.ipynb  9879Lecture08-2017.ipynb  9879Lecture09-2017.ipynb  9879Lecture10-2017.ipynb  9879Lecture11-2017.ipynb
MTH9879/Presentation/: MTH9879_presentation.tex
MTH9886/hw1/: MTH9886_HW1_SHENGQUAN_ZHOU.tex
MTH9886/hw2/: MTH9886_HW2_SHENGQUAN_ZHOU.tex
MTH9886/hw3/: MTH9886_HW3_SHENGQUAN_ZHOU.xlsx
MTH9886/hw4/: MTH9886_HW4_SHENGQUAN_ZHOU.xlsx
MTH9886/hw5/: MTH9886_HW5_Q2_SHENGQUAN_ZHOU.xlsm  MTH9886_HW5_SHENGQUAN_ZHOU.tex
MTH9893/hw1/: README  TA_Feedback  hw1.q  quote_count.csv  trade_volume.csv
MTH9893/hw2/: README  circular_convolution.py  compound_smooth_impulse_response.py  compound_smooth_trade_volumes.py  delta.py  ema.py  ema_and_delay_price_series.py  ema_price_series.py  gain.py  initialization.py  jpm_quotes.csv  macd.py  macd_log_price_series.py  macd_m1_log_price_series.py  plot_impulse_responses.py  plot_quote_trade_data.py  step.py  truncation.py
MTH9893/hw3/: README  README~  box_diff.py  box_diff_macd_comparison.py  box_ema_comparison.py  calc_box_diff_macd_spectra_mse.py  calc_box_ema_spectra_mse.py  calc_ema_imacd_spectra_mse.py  diff.py  ema_int_macd_poly_comparison.py  macd.py  (+3 more)
documents/: fourier.tex
kalmanfilter/: config.py  kalman.py  runYields.py  test.py  treasury_yields.csv
quant-lib/bonds/gtests/: CMakeCache.txt  CMakeLists.txt  Makefile  bond.t.cpp  cmake_install.cmake  runTests
quant-lib/options/gtests/: CMakeCache.txt  CMakeLists.txt  Makefile  black_scholes.t.cpp  cmake_install.cmake  runTests
quant-lib/reusable/gtests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  runTests  time_dependent_parameters.t.cpp
statsmodels/: README  correlate.sh  granger.py  regress.py  regress.sh  run1500.sh  run2.sh  run34.sh  runbanks.sh
(+148 files in other folders)
